# dagster-data-loader

./: .gitignore
dagster-code/: README.md  pyproject.toml  setup.cfg  setup.py
dagster-code/dagster_code/: definitions.py
dagster-code/dagster_code/assets/: ck_sync_assets.py  clickhouse_base.py  ifind_asset.py  tushare_assets.py
dagster-code/dagster_code/resource/: clickhouse.py  ifind_client.py  ts_client.py
dagster-code/dagster_code/utils/: date_util.py
