[project]
name = "dagster_code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "clickhouse_connect",
    "pandas",
    "loguru",
    "tushare",
    "dagster-webserver>=1.9.4",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dagster_code.definitions"
project_name = "dagster_code"

[tool.setuptools.packages.find]
exclude=["dagster_code_tests"]
